{
    "name": "InputSystem",
    "maps": [
        {
            "name": "Player",
            "id": "b2fbedf4-d264-4722-b0dc-c2db710f97b3",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "3c2dccc6-91fe-4a28-8682-55f52c39fea9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1e0a0fad-54a7-444a-bdeb-b70e9899f2a2",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}